--- a/src/index.css
+++ b/src/index.css
@@ -167,3 +167,52 @@ noscript {
 #runtime_errors .unique_count.empty {
     display: none;
 }
+
+#toast {
+    font-size: 120%;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0.5rem;
+    gap: 0.5rem;
+
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+}
+
+#toast .warning_toast {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    background-color: #f8c818;
+    padding: 0.5rem 0.75rem;
+    border-radius: 3px;
+}
+
+#toast .message {
+    max-width: 25vw;
+}
+
+@media (max-width: 800px) {
+    #toast .message {
+        max-width: unset;
+    }
+}
+
+#toast .title {
+    font-weight: bold;
+    padding-bottom: 0.2rem;
+    margin-bottom: 0.2rem;
+    border-bottom: dashed 1px #E04020;
+}
+
+#toast .description {
+    font-size: 95%;
+}
+
+#toast svg.warning {
+    flex-shrink: 0;
+    height: 2rem;
+}
