--- a/public/index.css
+++ b/public/index.css
@@ -12,11 +12,21 @@ html {
     --loading-color: #f8b0b4;
 }
 
+html:not(.level_editor) main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+}
+
 #game_canvas {
     /* see: http://jsfiddle.net/namuol/VAXrL/1459/ */
     image-rendering: -moz-crisp-edges;
     image-rendering: pixelated;
+}
 
+html:not(.level_editor) #game_canvas {
     cursor: none;
 
     border-radius: 4px;
@@ -104,14 +114,6 @@ body {
     background-color: var(--bg-color);
     display: flex;
     height: 100%;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
 }
 
 noscript {
